# WuWan

./: .gitignore  CMakeLists.txt  README.md  WuWan.py  WuWanGUI.py  WuWan_main.ipynb  WuWan_pavement_slo.py  WuWanv02.c  WuWanv02.html  WuWanv02.pyx  back_calc_data.csv  data.csv  demo_backcalc.py  demo_forward.ipynb  noise_prior_data.csv  plot_backcalc.py  pyproject.toml  setup_mac.py  setup_win.py
WuWan v0.2 for Mac/: WuWanv02.pyx  setup_mac.py
WuWan v0.2 for Win/: WuWan_main.ipynb
WuWan v0.21 for Mac/: WuWan_main.ipynb  WuWanv021.pyx  gsl_wrappers.pxd  gsl_wrappers.pyx  integrand_solver.pxd  integrand_solver.pyx  math_fun.pxd  math_fun.pyx  processing_function.pxd  processing_function.pyx
src/: WuWan_pavement_inverse.py  bessel_table.h  forward.h  forward_main.cpp  interand_solver.cpp  inverse.h  inverse_functor.h  inverse_main.cpp  math_fun.h  montecarlo_main.cpp  processing_function.h  projected_lm.h  structures.h
