[build-system]
requires = ["scikit-build-core", "pybind11", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "WuWan_pavement_forward"
version = "0.3.1"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.0"
]


[tool.scikit-build]

cmake.build-type = "Release"
cmake.verbose = true  
